--- a/Cleaning Table.ipynb
+++ b/Cleaning Table.ipynb
@@ -1,15 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b424b06d",
+   "metadata": {},
+   "source": [
+    "# Cleaning Table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb8e3f74",
+   "metadata": {},
+   "source": [
+    "Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ae7a4644",
+   "execution_count": null,
+   "id": "3faa7085",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df1ac443",
+   "metadata": {},
+   "source": [
+    "Reading the data and remove first column of  \"noname\" and show the DataFrame and df1's info"
    ]
   },
   {
@@ -367,6 +391,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ddb69ce",
+   "metadata": {},
+   "source": [
+    "Treating with NAN values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "5ebda3ca",
@@ -374,57 +406,6 @@
    "outputs": [],
    "source": [
     "df1 = df1[df1[\"Language\"].notna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "429dc49a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4514 entries, 0 to 6499\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   Song Name               4514 non-null   object \n",
-      " 1   Published Date          4514 non-null   object \n",
-      " 2   Published Time          4514 non-null   object \n",
-      " 3   Duartion Time           4514 non-null   object \n",
-      " 4   Views                   4514 non-null   int64  \n",
-      " 5   Likes                   4506 non-null   float64\n",
-      " 6   Comments                4476 non-null   float64\n",
-      " 7   Language                4514 non-null   object \n",
-      " 8   Countries Allowed       4514 non-null   int64  \n",
-      " 9   Channel Name            4514 non-null   object \n",
-      " 10  Channel Country         2784 non-null   object \n",
-      " 11  Channel Published Date  4514 non-null   object \n",
-      " 12  Subscribes              4514 non-null   int64  \n",
-      " 13  Video Count             4514 non-null   int64  \n",
-      " 14  Total Views             4514 non-null   float64\n",
-      "dtypes: float64(3), int64(4), object(8)\n",
-      "memory usage: 564.2+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2742cefe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop duplicate with same name songs\n",
-    "\n",
-    "df1 = df1.drop_duplicates(subset = 'Song Name')"
    ]
   },
   {
@@ -450,6 +431,26 @@
     "\n",
     "df1[\"Likes\"] = df1[\"Likes\"].fillna(value = df1[\"Likes\"].mean())\n",
     "df1[\"Comments\"] = df1[\"Comments\"].fillna(value = df1[\"Comments\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "828492b9",
+   "metadata": {},
+   "source": [
+    "Treating with duplicates and show df1's info once again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bc3a85c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop duplicate with same name songs\n",
+    "\n",
+    "df1 = df1.drop_duplicates(subset = 'Song Name')"
    ]
   },
   {
@@ -489,6 +490,14 @@
    ],
    "source": [
     "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da08b795",
+   "metadata": {},
+   "source": [
+    "Conversion of objects to numeric"
    ]
   },
   {
@@ -885,6 +894,14 @@
    ],
    "source": [
     "df1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce74bb9c",
+   "metadata": {},
+   "source": [
+    "Treating with NAN values that caused because incorrect pattern"
    ]
   },
   {
