--- a/Crawling Data.ipynb
+++ b/Crawling Data.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "45ab47b4",
+   "metadata": {},
+   "source": [
+    "# Crawling Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8044903b",
+   "metadata": {},
+   "source": [
+    "Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cdc3ece1",
+   "execution_count": null,
+   "id": "78afd1ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +28,14 @@
     "import pandas as pd\n",
     "import json\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c94fc3f",
+   "metadata": {},
+   "source": [
+    "Now we do a crawling in \"kworb.net\" to get the link of top songs in YouTube"
    ]
   },
   {
@@ -38,6 +62,14 @@
     "for Toplist in Toplists.find_all(\"a\"):\n",
     "        if Toplist.get_text()==\"Top Lists\":\n",
     "            newlink = Home_page_url + Toplist[\"href\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2d4224b",
+   "metadata": {},
+   "source": [
+    "Find by crawling all the links of each year of top songs in YouTube"
    ]
   },
   {
@@ -73,6 +105,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a42d625",
+   "metadata": {},
+   "source": [
+    "Make a list of each colunm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "f0ff2f38",
@@ -97,13 +137,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1de587d",
+   "metadata": {},
+   "source": [
+    "Get all the information from each song"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "a8653d3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(2,3):\n",
+    "for i in range(0,12):\n",
     "    responseSongs = requests.get(links[i])\n",
     "    soupSongs = BeautifulSoup(responseSongs.content, \"html.parser\")\n",
     "    table = soupSongs.findAll(\"td\",attrs = {\"class\":\"text\"})\n",
@@ -200,6 +248,14 @@
     "            video_count.append(resChannel_dict['items'][0]['statistics']['videoCount'])\n",
     "        except:\n",
     "            video_count.append(np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da1fc8c",
+   "metadata": {},
+   "source": [
+    "Make a DateFrame"
    ]
   },
   {
@@ -523,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"project 2020.csv\")"
+    "df.to_csv(\"project.csv\")"
    ]
   }
  ],
