--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4f460fac",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "187fac83",
+   "metadata": {},
+   "source": [
+    "Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f89364c3",
+   "execution_count": null,
+   "id": "76c8b4f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +29,14 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from mpl_toolkits.mplot3d import Axes3D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad816ab",
+   "metadata": {},
+   "source": [
+    "Reading the data"
    ]
   },
   {
@@ -539,11 +563,11 @@
     }
    ],
    "source": [
-    "grouped = df.groupby(\"Published Date\").mean()# Plot the data\n",
-    "grouped.plot(kind='bar', y='Views',color = 'brown')# Add a title and labels to the x and y axes\n",
+    "grouped = df.groupby(\"Published Date\").mean()\n",
+    "grouped.plot(kind='bar', y='Views',color = 'brown')\n",
     "plt.title(\"Average Number of Views per Year\")\n",
     "plt.xlabel(\"Year\")\n",
-    "plt.ylabel(\"Number of Views\")# Show the plot\n",
+    "plt.ylabel(\"Number of Views\")\n",
     "plt.show()"
    ]
   },
